--- a/rancid_tomatillos/package.json
+++ b/rancid_tomatillos/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "cypress": "^12.12.0"
   }
 }
